--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,40 @@
+build/
+
+*.log
+*.pdb
+
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
 *.exe
 *.json
 *.o
@@ -7,7 +44,7 @@
 *.pdb
 *.log
 *.tlog
-*.bat
+
 *.sh
 *.so
 *.s
